[gd_scene load_steps=22 format=3 uid="uid://btuoglk8nccmo"]

[ext_resource type="Script" uid="uid://c34hl32kw8c0g" path="res://scripts/globals/game.gd" id="1_o78e0"]
[ext_resource type="PackedScene" uid="uid://en68ktjhy0r" path="res://scenes/screens/Game_HUD.tscn" id="2_4ji0l"]
[ext_resource type="Script" uid="uid://cj2krpjorx8vx" path="res://scripts/ui/camera_shake.gd" id="2_ln6eb"]
[ext_resource type="PackedScene" uid="uid://df0x0v6cnu5vv" path="res://scenes/ships/player.tscn" id="3_4ji0l"]
[ext_resource type="PackedScene" uid="uid://buhm0e2j51ldf" path="res://scenes/screens/warning_overlay.tscn" id="5_4ji0l"]
[ext_resource type="PackedScene" uid="uid://djnhvnk2mbswh" path="res://scenes/bosses/cone_head.tscn" id="5_ln6eb"]
[ext_resource type="AudioStream" uid="uid://028e84voy6mk" path="res://assets/JDSherbert - Ambiences Music Pack - Cosmic Star.wav" id="7_0q6jn"]
[ext_resource type="AudioStream" uid="uid://dwe1maiurcb12" path="res://assets/LASRGun_Particle Compressor Fire_01.wav" id="8_kauht"]
[ext_resource type="AudioStream" uid="uid://hw2bjyw2b3ja" path="res://assets/EXPLDsgn_Explosion Impact_14.wav" id="9_yruvw"]

[sub_resource type="Animation" id="Animation_4ji0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1320, 336)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Head/MouthOpen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ln6eb"]
resource_name = "conehead_peek"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1320, 336), Vector2(1248, 336), Vector2(1328, 336)]
}

[sub_resource type="Animation" id="Animation_kauht"]
resource_name = "conehead_spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(608, -120), Vector2(608, 136)]
}

[sub_resource type="Animation" id="Animation_0q6jn"]
resource_name = "conehead_suck"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Head/MouthOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ji0l"]
_data = {
&"RESET": SubResource("Animation_4ji0l"),
&"conehead_peek": SubResource("Animation_ln6eb"),
&"conehead_spawn": SubResource("Animation_kauht"),
&"conehead_suck": SubResource("Animation_0q6jn")
}

[sub_resource type="Environment" id="Environment_o78e0"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.45
glow_blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o78e0"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ln6eb"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ji0l"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 5.0
scale_max = 5.0

[sub_resource type="Animation" id="Animation_vsgdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 360)]
}

[sub_resource type="Animation" id="Animation_yruvw"]
resource_name = "fly_away"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 360), Vector2(640, -128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vsgdc"]
_data = {
&"RESET": SubResource("Animation_vsgdc"),
&"fly_away": SubResource("Animation_yruvw")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_o78e0")

[node name="GameHUD" parent="." instance=ExtResource("2_4ji0l")]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 6
size_flags_vertical = 6
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("2_ln6eb")
default_offset = Vector2(640, 360)

[node name="Timer" type="Timer" parent="Camera2D"]

[node name="Player" parent="." instance=ExtResource("3_4ji0l")]
position = Vector2(640, 360)
scale = Vector2(0.6, 0.6)
ship_indicator_scale = 3
max_ship_size = 175.0

[node name="Lasers" type="Node" parent="."]

[node name="AsteroidSpawner" type="Marker2D" parent="."]
position = Vector2(1280, 360)

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Asteroids" type="Node" parent="."]

[node name="ConeHead" parent="." instance=ExtResource("5_ln6eb")]
visible = false
position = Vector2(1320, 336)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConeHead"]
libraries = {
&"": SubResource("AnimationLibrary_4ji0l")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_o78e0")

[node name="StarfieldParallax" type="Node2D" parent="."]
modulate = Color(1.25, 1.25, 1.25, 1)

[node name="StarfieldBackEmitter" type="GPUParticles2D" parent="StarfieldParallax"]
z_index = -100
position = Vector2(1296, 360)
amount = 1000
lifetime = 140.0
preprocess = 280.0
process_material = SubResource("ParticleProcessMaterial_o78e0")

[node name="StarfieldMiddleEmitter" type="GPUParticles2D" parent="StarfieldParallax"]
z_index = -95
position = Vector2(1296, 360)
amount = 250
lifetime = 140.0
preprocess = 280.0
process_material = SubResource("ParticleProcessMaterial_ln6eb")

[node name="StarfieldFrontEmitter" type="GPUParticles2D" parent="StarfieldParallax"]
z_index = -90
position = Vector2(1296, 360)
amount = 30
lifetime = 140.0
preprocess = 280.0
process_material = SubResource("ParticleProcessMaterial_4ji0l")

[node name="WarningOverlay" parent="." instance=ExtResource("5_4ji0l")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vsgdc")
}

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0q6jn")
autoplay = true
bus = &"SFX"

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_kauht")
volume_db = -4.952
bus = &"SFX"

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_yruvw")
volume_db = 5.943
bus = &"SFX"

[connection signal="grow_ship" from="." to="Player" method="_on_game_grow_ship"]
[connection signal="score_updated" from="." to="GameHUD" method="_on_game_score_updated"]
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="win_game" from="Player" to="." method="_on_player_win_game"]
[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_asteroid_spawn_timer_timeout"]
[connection signal="died" from="ConeHead" to="." method="_on_cone_head_died"]
[connection signal="health_set" from="ConeHead" to="ConeHead/Body/HUD" method="_on_cone_head_health_set"]
[connection signal="reset" from="ConeHead" to="." method="_on_cone_head_reset"]
[connection signal="take_damage" from="ConeHead" to="ConeHead/Body/HUD" method="_on_cone_head_take_damage"]
[connection signal="animation_finished" from="ConeHead/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Player"]
[editable path="ConeHead"]
[editable path="ConeHead/Body/HUD"]
